{
    "name": "Actions",
    "maps": [
        {
            "name": "Player",
            "id": "b2d006cc-b6fd-488b-85b0-11b1f7f7f5b9",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "a5e0f880-7a4c-4115-91d0-65bd4428b036",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "2843e221-9436-451a-8d74-f1837c196300",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "849ebca7-6ed9-4c5d-a09c-c73f71e47ba0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "OpenInventory",
                    "type": "Button",
                    "id": "ad0925b6-0aab-4a78-bcc4-c3b4af712278",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SwapCell",
                    "type": "Button",
                    "id": "5de3350a-69b0-49e3-953c-88fc609c89bc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "919624e1-77fc-492a-9f5c-7755433b74d5",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "d24d2b7e-e452-4675-9af6-8d1e6c74fbf5",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "b4803211-ba9f-4b9d-93be-821675ed0fed",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "b6a477e4-4d79-4e9a-b097-715014004ad9",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "3daadd0f-8e49-406d-94fb-8a2468ea45d5",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "8d8cd70d-1a51-448e-88aa-3a1ed6b1aadf",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c762d558-912b-4965-9c5d-3bd294ca3d21",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cd14cfad-e3d1-41d0-beb5-d55d639003b1",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "a38e659a-6d55-4fe2-951c-c5e636b65377",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwapCell",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "900adff9-25cc-4f48-9263-754c7123bdc5",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwapCell",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "7ca14ade-fb73-4869-877d-7b92f8f66bd0",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwapCell",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "98a206ee-b603-4bdd-8cdf-c103cee73a40",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwapCell",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "5e258cb3-4695-48c1-884a-cab064cf4c5e",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwapCell",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "NPC",
            "id": "0f1ab667-dc50-4cde-9b66-a1ed8f4a40b5",
            "actions": [
                {
                    "name": "StartDialog",
                    "type": "Button",
                    "id": "6cf3fa3f-64c2-4a60-9724-7993770ec5cf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "76070bd7-e73a-49da-82da-e324e347178b",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "Hold(duration=0.3)",
                    "processors": "",
                    "groups": "",
                    "action": "StartDialog",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "DialogManager",
            "id": "711d5f30-9d14-4215-a7d0-7b63c61ef07f",
            "actions": [
                {
                    "name": "NextPhrase",
                    "type": "Button",
                    "id": "3b440451-7573-47c0-a713-a76c11eb92f0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "92635176-b3ac-426b-8f5c-ed7d33a6d11c",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextPhrase",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Items",
            "id": "0a942f0b-2a84-42c2-aac2-650b1d007342",
            "actions": [
                {
                    "name": "TakeItem",
                    "type": "Button",
                    "id": "22186a50-d40b-4981-a320-18c9ccf04aa2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d8c82f0d-3e05-4e06-b4e6-7c4dbbc53d69",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TakeItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "TabContorolManager",
            "id": "dd7525ef-786b-4a03-9248-e01762b90048",
            "actions": [
                {
                    "name": "SwipeRight",
                    "type": "Button",
                    "id": "d47d636e-4e4c-49a8-a9f9-721210e0b217",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SwipeLeft",
                    "type": "Button",
                    "id": "5f74207b-049c-451b-9deb-8bf7e927c98f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "69a618e2-ac00-472a-bc1f-53f4392d71f8",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "SwipeRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "68dc142e-fe33-4cb9-b939-a0f2393df3aa",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwipeLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}